lazy load firacode

--- a/src/template/article/index.ejs
+++ b/src/template/article/index.ejs
@@ -20,7 +20,6 @@
     }
   </style>
   
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/firacode@5.2.0/distr/fira_code.min.css" />
   <link rel="stylesheet" href="/prism.css" />
 </head>
 
@@ -35,6 +34,7 @@
   <%- include('./article_ads.ejs') %>
   <%- include('../common/footer.ejs') %>
   <script src="/prism.js"></script>
+  <script src="/firacode.js" async defer></script>
 </body>
 
 </html>
