--- a/src/template/common/footer.ejs
+++ b/src/template/common/footer.ejs
@@ -24,6 +24,9 @@
 </style>
 
 <footer class="page-footer">
-  <a href="<%= config.github_repository %>/blob/master/LICENSE">&copy;</a> <%= new Date().getFullYear() %>
+  <a href="<%= config.github_repository %>/blob/master/LICENSE">&copy;</a>
+  <%= new Date().getFullYear() %>
   <a class="author" href="<%= config.author_site %>"><%= config.author.toUpperCase() %></a>
+  ,&nbsp;
+  <a class="author" href="https://stats.uptimerobot.com/4nO5RUYB60">UPTIME</a>
 </footer>
