--- a/src/template/index.ejs
+++ b/src/template/index.ejs
@@ -59,7 +59,9 @@
         <h2 class="article-title">
           <a href="<%= config.public_path %>/<%= article.id %>"><%= article.title %></a>
         </h2>
-        <time class="article-time"><%= article.publishTime %></time>
+        <% if (article.publishTime) { %>
+          <time class="article-time"><%= article.publishTime %></time>
+        <% } %>
       </li>
     <% }) %>
   </ul>
