--- a/src/template/common/footer.ejs
+++ b/src/template/common/footer.ejs
@@ -24,7 +24,7 @@
 </style>
 
 <footer class="page-footer">
-  <a href="<%= config.github_repository %>/blob/master/LICENSE">&copy;</a>
+  <a href="<%= config.github_repository %>/blob/master/license">&copy;</a>
   <%= new Date().getFullYear() %>
   <a class="underline" href="<%= config.author_site %>"><%= config.author.toUpperCase() %></a>
   &nbsp;|&nbsp;
