improve footer style

--- a/src/template/common/footer.ejs
+++ b/src/template/common/footer.ejs
@@ -26,7 +26,8 @@
 <footer class="page-footer">
   <a href="<%= config.github_repository %>/blob/master/license">&copy;</a>
   <%= new Date().getFullYear() %>
-  <a class="underline" href="<%= config.author_site %>"><%= config.author.toUpperCase() %></a>
+  &nbsp;
+  <a class="underline" href="https://i.mebtte.com">MEBTTE</a>
   &nbsp;|&nbsp;
   <a class="underline" href="https://stats.uptimerobot.com/4nO5RUYB60">UPTIME</a>
   &nbsp;|&nbsp;
