--- a/src/template/common/head.ejs
+++ b/src/template/common/head.ejs
@@ -1,6 +1,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="author" content="<%= config.author %>" />
+<meta name="author" content="mebtte" />
 <meta name="keywords" content="<%= config.keywords.join(',') %>" />
 
 <!-- Google Analytics -->
