--- a/src/template/article/article_ads.ejs
+++ b/src/template/article/article_ads.ejs
@@ -10,6 +10,10 @@
     overflow: hidden;
     text-align: center;
   }
+
+  .adsbygoogle:empty {
+    display: none;
+  }
 </style>
 <ins
   class="adsbygoogle"
