update_strategy_of_front_end_assets_under_the_load_balancing

--- a/src/template/article/article_content.ejs
+++ b/src/template/article/article_content.ejs
@@ -54,7 +54,7 @@
     word-break: break-word;
   }
 
-  article p code, article ul code, article table code {
+  article p code, article ul code, article ol code, article table code {
     padding-inline: 4px;
     border-radius: var(--border-radius);
     background: rgba(237, 106, 94, 0.3);
