--- a/src/template/article/article_header.ejs
+++ b/src/template/article/article_header.ejs
@@ -28,7 +28,7 @@
 
 <section class="article-header">
   <h1 class="article-title">
-    <a href="<%= config.public_path %>/<%= id %>"><%= title %></a>
+    <a href="/<%= id %>"><%= title %></a>
   </h1>
   <time class="article-publish-time"><%= publishTime %></time>
 </section>
