--- a/src/template/common/head.ejs
+++ b/src/template/common/head.ejs
@@ -1,7 +1,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="author" content="mebtte" />
-<meta name="keywords" content="<%= config.keywords.join(',') %>" />
+<meta name="keywords" content="HTML, CSS, JavaScript, Web, Front-End" />
 
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-CESZTRKM96"></script>
@@ -17,7 +17,7 @@
 <meta property="og:image" content="/logo.png" />
 
 <link rel="shortcut icon" type="image/png" href="/logo.png" />
-<link rel="sitemap" type="application/xml" href="<%= config.public_path %>/sitemap.xml" />
+<link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-<link rel="preload" href="<%= config.public_path %>/<%= titleFontPath %>" as="font" crossOrigin="anonymous" />
-<link rel="preload" href="<%= config.public_path %>/<%= commonFontPath %>" as="font" crossOrigin="anonymous" />
+<link rel="preload" href="/<%= titleFontPath %>" as="font" crossOrigin="anonymous" />
+<link rel="preload" href="/<%= commonFontPath %>" as="font" crossOrigin="anonymous" />
