--- a/src/template/common/global_style.ejs
+++ b/src/template/common/global_style.ejs
@@ -1,7 +1,7 @@
 <style>
   @font-face {
     font-family: common_font;
-    src: url(<%= config.public_path %>/<%= commonFontPath %>);
+    src: url(/<%= commonFontPath %>);
   }
 
   html, body {
